--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
+spring.datasource.url=jdbc:mysql://localhost:3306/mydb
+spring.datasource.username=root
+spring.datasource.password=
 
+spring.jpa.show-sql=true
+spring.jpa.hibernate.use-new-id-generator-mappings=false
