Add create location UI jsp and add suffix and prefix on application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,6 @@ spring.datasource.password=
 
 spring.jpa.show-sql=true
 spring.jpa.hibernate.use-new-id-generator-mappings=false
+
+spring.mvc.view.prefix=/WEB-INF/jsps/
+spring.mvc.view.suffix=.jsp
